--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,21 @@ body {
     margin-right: 50px;
     margin-left: 50px;
 }
+
+.contato {
+    width: 114px;
+    height: 43px;
+    line-height: 2px;
+    text-align: center;
+    position: fixed;
+    bottom: 63px;
+    right: 4px;
+    border-radius: 32%;
+    background-color: rgb(122 141 99 / 53%);
+}
+.contato h1 {
+    padding: 7px;
+    font-size: 24px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #4e4747;
+}
